--- a/application/index/view/index/home.html
+++ b/application/index/view/index/home.html
@@ -16,9 +16,9 @@
 <div id="mask"></div>
 <div id="login-btn">SIGN IN</div>
 <div id="login-box">
-  <input type="text" name="account" placeholder="请输入用户名或邮箱">
-  <input type="password" name="password" placeholder="请输入密码">
-  <button type="button" id="login">登录</button>
+  <input type="text" name="account" placeholder="{:lang('Account input tip')}">
+  <input type="password" name="password" placeholder="{:lang('Password input tip')}">
+  <button type="button" id="login">{:lang('Sign In')}</button>
 </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
