--- a/application/index/view/admin/images/index.html
+++ b/application/index/view/admin/images/index.html
@@ -1,6 +1,6 @@
 {extend name="common:base" /}
 
-{block name="title"}图片管理 - {$config.site_name}{/block}
+{block name="title"}{:lang('Picture management')} - {$config.site_name}{/block}
 
 {block name="css"}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/viewerjs@1.5.0/dist/viewer.min.css">
@@ -11,22 +11,22 @@
   <main>
     <div class="mdui-chip">
       <span class="mdui-chip-icon"><i class="mdui-icon material-icons">&#xe88e;</i></span>
-      <span class="mdui-chip-title">共有 <small class="mdui-text-color-red">{$images->total()}</small> 张图片</span>
+      <span class="mdui-chip-title">{:lang('There are %s pictures in total', ['<small class="mdui-text-color-red">'.$images->total().'</small>'])}</span>
       <a href="" class="mdui-chip-delete" mdui-tooltip="{content: '刷新', position: 'right'}"><i class="mdui-icon material-icons">&#xe863;</i></a>
     </div>
     <div class="mdui-clearfix mdui-m-t-1"></div>
     <form action="" method="get" id="search-form">
       <select class="where mdui-select mdui-float-left" mdui-select>
-        <option value="{}">全部</option>
+        <option value="{}">{:lang('All')}</option>
         {foreach $strategyList as $key => $value}
         <option value='{"strategy": "{$key}"}' {if $key eq $strategy}selected{/if}>{$value.name}</option>
         {/foreach}
-        <option value='{"user_id": "0"}' {eq name="user_id" value="0"} selected{/eq}>访客图片</option>
-        <option value='{"suspicious": "1"}' {eq name="suspicious" value="1"} selected{/eq}>可疑图片</option>
+        <option value='{"user_id": "0"}' {eq name="user_id" value="0"} selected{/eq}>{:lang('Visitor picture')}</option>
+        <option value='{"suspicious": "1"}' {eq name="suspicious" value="1"} selected{/eq}>{:lang('Suspicious picture')}</option>
       </select>
       <input type="hidden" name="" id="search-input">
       <input type="hidden" name="page" value="1">
-      <input class="mdui-textfield-input search-input mdui-float-left" type="text" name="keyword" placeholder="回车搜索..." value="{$keyword}" autocomplete="off"/>
+      <input class="mdui-textfield-input search-input mdui-float-left" type="text" name="keyword" placeholder="{:lang('Enter search...')}" value="{$keyword}" autocomplete="off"/>
     </form>
     <div class="mdui-clearfix"></div>
     <div class="mdui-table-fluid mdui-m-t-2 mdui-m-b-2">
