--- a/application/index/view/admin/users/index.html
+++ b/application/index/view/admin/users/index.html
@@ -1,39 +1,39 @@
 {extend name="common:base" /}
 
-{block name="title"}用户管理 - {$config.site_name}{/block}
+{block name="title"}{:lang('User management')} - {$config.site_name}{/block}
 
 {block name="main"}
 <div class="mdui-container">
   <main>
     <div class="mdui-chip">
       <span class="mdui-chip-icon"><i class="mdui-icon material-icons">&#xe88e;</i></span>
-      <span class="mdui-chip-title">共有 <small class="mdui-text-color-red">{$users->total()}</small> 个用户</span>
-      <a href="" class="mdui-chip-delete" mdui-tooltip="{content: '刷新', position: 'right'}"><i class="mdui-icon material-icons">&#xe863;</i></a>
+      <span class="mdui-chip-title">{:lang('There are %s users in total', ['<small class="mdui-text-color-red">'.$users->total().'</small>'])}</span>
+      <a href="" class="mdui-chip-delete" mdui-tooltip="{content: '{:lang('Refresh')}', position: 'right'}"><i class="mdui-icon material-icons">&#xe863;</i></a>
     </div>
     <div class="mdui-clearfix mdui-m-t-1"></div>
     <form action="" method="post" id="search-form">
       <select class="where mdui-select mdui-float-left" name="state" mdui-select>
-        <option value="">全部</option>
-        <option value="1" {if 1 eq $state}selected{/if}>正常</option>
-        <option value="2" {if 2 eq $state}selected{/if}>冻结</option>
+        <option value="">{:lang('All')}</option>
+        <option value="1" {if 1 eq $state}selected{/if}>{:lang('Normal')}</option>
+        <option value="2" {if 2 eq $state}selected{/if}>{:lang('Frozen')}</option>
       </select>
       <input type="hidden" name="page" value="1">
-      <input class="mdui-textfield-input search-input mdui-float-left" type="text" name="keyword" placeholder="回车搜索..." value="{$keyword}" autocomplete="off"/>
+      <input class="mdui-textfield-input search-input mdui-float-left" type="text" name="keyword" placeholder="{:lang('Enter search...')}" value="{$keyword}" autocomplete="off"/>
     </form>
     <div class="mdui-clearfix"></div>
     <div class="mdui-table-fluid mdui-m-t-2 mdui-m-b-2">
       <table class="mdui-table mdui-table-selectable">
         <thead>
         <tr>
-          <th>用户名</th>
-          <th>角色组</th>
-          <th>昵称</th>
-          <th>邮箱</th>
-          <th>已使用容量</th>
-          <th>总容量</th>
-          <th>账号状态</th>
-          <th>注册IP</th>
-          <th>操作</th>
+          <th>{:lang('User name')}</th>
+          <th>{:lang('Role group')}</th>
+          <th>{:lang('Nickname')}</th>
+          <th>{:lang('Email')}</th>
+          <th>{:lang('Used capacity')}</th>
+          <th>{:lang('Total capacity')}</th>
+          <th>{:lang('Account status')}</th>
+          <th>{:lang('Register IP')}</th>
+          <th>{:lang('Operation')}</th>
         </tr>
         </thead>
         <tbody>
@@ -53,15 +53,15 @@
           <td>{$value.quota|format_size}</td>
           <td>
             <select class="mdui-select state">
-              <option value="1" {if 1 eq $value.state}selected{/if}>正常</option>
-              <option value="0" {if 0 eq $value.state}selected{/if}>冻结</option>
+              <option value="1" {if 1 eq $value.state}selected{/if}>{:lang('Normal')}</option>
+              <option value="0" {if 0 eq $value.state}selected{/if}>{:lang('Frozen')}</option>
             </select>
           </td>
           <td>{$value.reg_ip}</td>
           <td>
             <div class="mdui-btn-group">
-              <button class="mdui-btn mdui-btn-raised mdui-btn-dense edit">编辑</button>
-              <button class="mdui-btn mdui-btn-raised mdui-ripple mdui-color-red mdui-btn-dense del">删除</button>
+              <button class="mdui-btn mdui-btn-raised mdui-btn-dense edit">{:lang('Edit')}</button>
+              <button class="mdui-btn mdui-btn-raised mdui-ripple mdui-color-red mdui-btn-dense del">{:lang('Delete')}</button>
             </div>
           </td>
         </tr>
@@ -76,39 +76,39 @@
   <div class="mdui-dialog" id="edit-dialog">
     <div class="mdui-dialog-content">
       <form action="{:url('admin/users/edit')}" method="post">
-        <div class="mdui-dialog-title">修改用户数据</div>
+        <div class="mdui-dialog-title">{:lang('Modify user data')}</div>
         <div class="mdui-textfield">
-          <label class="mdui-textfield-label">用户名</label>
-          <input class="mdui-textfield-input" type="text" name="username" value="" placeholder="用户名" autocomplete="off"/>
+          <label class="mdui-textfield-label">{:lang('User name')}</label>
+          <input class="mdui-textfield-input" type="text" name="username" value="" placeholder="{:lang('User name')}" autocomplete="off"/>
         </div>
         <div class="mdui-textfield">
-          <label class="mdui-textfield-label">邮箱</label>
-          <input class="mdui-textfield-input" type="email" name="email" value="" placeholder="邮箱" autocomplete="off"/>
+          <label class="mdui-textfield-label">{:lang('Email')}</label>
+          <input class="mdui-textfield-input" type="email" name="email" value="" placeholder="{:lang('Email')}" autocomplete="off"/>
         </div>
         <div class="mdui-textfield">
-          <label class="mdui-textfield-label">昵称</label>
-          <input class="mdui-textfield-input" type="text" name="nickname" value="" maxlength="15" placeholder="昵称" autocomplete="off"/>
+          <label class="mdui-textfield-label">{:lang('Nickname')}</label>
+          <input class="mdui-textfield-input" type="text" name="nickname" value="" maxlength="15" placeholder="{:lang('Nickname')}" autocomplete="off"/>
         </div>
         <div class="mdui-textfield">
-          <label class="mdui-textfield-label">储存容量</label>
-          <input class="mdui-textfield-input" type="text" name="quota" value="" placeholder="储存容量" autocomplete="off"/>
+          <label class="mdui-textfield-label">{:lang('Storage capacity')}</label>
+          <input class="mdui-textfield-input" type="text" name="quota" value="" placeholder="{:lang('Storage capacity')}" autocomplete="off"/>
         </div>
         <div class="mdui-textfield">
-          <label class="mdui-textfield-label">已使用储存容量</label>
-          <input class="mdui-textfield-input" type="text" name="use_quota" value="" placeholder="已使用储存容量" autocomplete="off" disabled/>
+          <label class="mdui-textfield-label">{:lang('Used storage capacity')}</label>
+          <input class="mdui-textfield-input" type="text" name="use_quota" value="" placeholder="{:lang('Used storage capacity')}" autocomplete="off" disabled/>
         </div>
         <div class="mdui-textfield">
-          <label class="mdui-textfield-label">密码</label>
-          <input class="mdui-textfield-input" type="password" name="password" placeholder="密码，不修改请留空" autocomplete="off"/>
+          <label class="mdui-textfield-label">{:lang('Password')}</label>
+          <input class="mdui-textfield-input" type="password" name="password" placeholder="{:lang('Password tip')}" autocomplete="off"/>
         </div>
         <div class="mdui-textfield">
-          <label class="mdui-textfield-label">确认密码</label>
-          <input class="mdui-textfield-input" type="password" name="password_confirm" placeholder="确认密码" autocomplete="off"/>
+          <label class="mdui-textfield-label">{:lang('Confirm password')}</label>
+          <input class="mdui-textfield-input" type="password" name="password_confirm" placeholder="{:lang('Confirm password')}" autocomplete="off"/>
         </div>
         <input type="hidden" name="id" value="">
         <div class="mdui-dialog-actions">
-          <button type="button" class="mdui-btn mdui-ripple" mdui-dialog-cancel>取消</button>
-          <button class="mdui-btn mdui-ripple">修改</button>
+          <button type="button" class="mdui-btn mdui-ripple" mdui-dialog-cancel>{:lang('Cancel')}</button>
+          <button class="mdui-btn mdui-ripple">{:lang('Modify')}</button>
         </div>
       </form>
     </div>
@@ -134,9 +134,9 @@
 <script>
   var methods = {
     delete: function (id, batch, callback) {
-      var msg = '确认删除该用户吗？';
+      var msg = lang('Are you sure to delete this user?');
       if (batch) {
-        msg = '确认删除选中项用户吗？';
+        msg = lang('Are you sure to delete the selected user?');
       }
       mdui.confirm(msg, function () {
         app.request("{:url('admin/users/delete')}", {id: id}, function () {
@@ -144,12 +144,12 @@
         });
       }, function () {
 
-      }, {confirmText: '确定', cancelText: '取消'});
+      }, {confirmText: lang('Confirm'), cancelText: lang('Cancel')});
     },
     frozen: function (id, batch, callback) {
-      var msg = '确认冻结该用户吗？';
+      var msg = lang('Are you sure to freeze this user?');
       if (batch) {
-        msg = '确认冻结选中项用户吗？';
+        msg = lang('Are you sure to freeze the selected users?');
       }
       mdui.confirm(msg, function () {
         app.request("{:url('admin/users/frozen')}", {id: id}, function () {
@@ -157,7 +157,7 @@
         });
       }, function () {
 
-      }, {confirmText: '确定', cancelText: '取消'});
+      }, {confirmText: lang('Confirm'), cancelText: lang('Cancel')});
     }
   };
 
@@ -180,7 +180,7 @@
       }
     } else {
       mdui.snackbar({
-        message: '至少选择一项数据！'
+        message: lang('Select at least one data!')
       });
     }
   }
