--- a/application/index/view/admin/strategy/index.html
+++ b/application/index/view/admin/strategy/index.html
@@ -8,12 +8,12 @@
     <div class="strategy-container">
       <div class="mdui-typo">
         <blockquote class="mdui-m-l-0">
-          <p>储存策略，可配置多个，使用不同的角色组来控制用户图片储存策略。</p>
+          <p>{:lang('Storage strategy tips')}</p>
         </blockquote>
       </div>
       <div id="tab" class="mdui-tab mdui-tab-scrollable" mdui-tab>
         {foreach $strategy as $key => $value}
-        <a href="#tab-{$key}" class="mdui-ripple {if $key eq $config.storage_strategy}mdui-tab-active{/if}">{$value.name}</a>
+        <a href="#tab-{$key}" class="mdui-ripple {if $key eq $config.storage_strategy}mdui-tab-active{/if}">{:lang($value.name)}</a>
         {/foreach}
       </div>
       <div class="mdui-col-sm-8 mdui-col-md-8">
@@ -44,8 +44,8 @@
             </div>
             {/foreach}
             <input type="hidden" name="storage_strategy" value="{$key}">
-            <button type="submit" class="mdui-btn mdui-btn-raised mdui-ripple mdui-color-theme-accent">保存</button>
-            <button type="reset" class="mdui-btn mdui-btn-raised mdui-ripple">重置</button>
+            <button type="submit" class="mdui-btn mdui-btn-raised mdui-ripple mdui-color-theme-accent">{:lang('Save')}</button>
+            <button type="reset" class="mdui-btn mdui-btn-raised mdui-ripple">{:lang('Reset')}</button>
           </form>
         </div>
         {/foreach}
