:sparkles: 模板多语言

--- a/application/index/view/admin/strategy/index.html
+++ b/application/index/view/admin/strategy/index.html
@@ -1,6 +1,6 @@
 {extend name="common:base" /}
 
-{block name="title"}储存策略 - {$config.site_name}{/block}
+{block name="title"}{:lang('Storage strategy')} - {$config.site_name}{/block}
 
 {block name="main"}
 <div class="mdui-container mdui-p-b-5">
