--- a/application/index/view/admin/system/index.html
+++ b/application/index/view/admin/system/index.html
@@ -30,10 +30,10 @@
               <label class="mdui-textfield-label">{:lang($val.title)}{$val.tip ? '(' . lang($val.tip) . ')' : ''}</label>
               {switch $val.type}
               {case text}
-              <input class="mdui-textfield-input" type="{$val.input_type}" name="{$val.name}" value="{$val.value}" autocomplete="off" placeholder="{$val.title}"/>
+              <input class="mdui-textfield-input" type="{$val.input_type}" name="{$val.name}" value="{$val.value}" autocomplete="off" placeholder="{:lang($val.title)}"/>
               {/case}
               {case textarea}
-              <textarea class="mdui-textfield-input" rows="6" name="{$val.name}" autocomplete="off" placeholder="{$val.title}">{$val.value}</textarea>
+              <textarea class="mdui-textfield-input" rows="6" name="{$val.name}" autocomplete="off" placeholder="{:lang($val.title)}">{$val.value}</textarea>
               {/case}
               {case bool}
               <label class="mdui-switch">
