--- a/application/index/view/common/base.html
+++ b/application/index/view/common/base.html
@@ -151,7 +151,7 @@
   </div>
 </footer>
 {/block}
-<script>window.languages = JSON.parse('{$languages|raw}');</script>
+<script>window.languages = {$languages|raw}</script>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/mdui@0.4.3/dist/js/mdui.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.6/dist/clipboard.min.js"></script>
