--- a/application/index/view/user/settings.html
+++ b/application/index/view/user/settings.html
@@ -12,7 +12,7 @@
           <input class="mdui-textfield-input" type="text" value="{$user.username}" disabled/>
         </div>
         <div class="mdui-textfield">
-          <label class="mdui-textfield-label">{:lang('Email')}</label>
+          <label class="mdui-textfield-label">{:lang('Mailbox')}</label>
           <input class="mdui-textfield-input" type="email" value="{$user.email}" disabled/>
         </div>
         <div class="mdui-textfield">
