--- a/application/index/view/admin/strategy/index.html
+++ b/application/index/view/admin/strategy/index.html
@@ -22,10 +22,10 @@
           <form action="{:url('admin/strategy/index')}" method="post">
             {foreach $value as $val}
             <div class="mdui-textfield">
-              <label class="mdui-textfield-label">{$val.title}{$val.tip ? '(' . $val.tip . ')' : ''}</label>
+              <label class="mdui-textfield-label">{:lang($val.title)}{$val.tip ? '(' . lang($val.tip) . ')' : ''}</label>
               {switch $val.type}
               {case text}
-              <input class="mdui-textfield-input" type="{$val.input_type}" name="{$val.name}" value="{$val.value}" autocomplete="off" placeholder="{$val.title}"/>
+              <input class="mdui-textfield-input" type="{$val.input_type}" name="{$val.name}" value="{$val.value}" autocomplete="off" placeholder="{:lang($val.title)}"/>
               {/case}
               {case bool}
               <label class="mdui-switch">
