--- a/application/index/view/admin/system/console.html
+++ b/application/index/view/admin/system/console.html
@@ -19,43 +19,43 @@
         <div class="mdui-col item mdui-m-b-2">
           <div class="mdui-color-cyan mdui-text-center mdui-text-color-white mdui-p-a-2 mdui-shadow-4 mdui-hoverable">
             <p><i class="mdui-icon material-icons">&#xe3b6;</i> {:lang('Number of pictures')}</p>
-            <span class="mdui-text-color-white">{$images_num} <small class="mdui-text-color-white">{:lang('Zhang')}</small></span>
+            <span class="mdui-text-color-white">{$images_num} <small class="mdui-text-color-white">{:lang('Piece')}</small></span>
           </div>
         </div>
         <div class="mdui-col item mdui-m-b-2">
           <div class="mdui-color-orange mdui-text-center mdui-text-color-white mdui-p-a-2 mdui-shadow-4 mdui-hoverable">
             <p><i class="mdui-icon material-icons">&#xe8fd;</i> {:lang('Suspicious picture')}</p>
-            <span class="mdui-text-color-white">{$suspicious_images_num} <small class="mdui-text-color-white">{:lang('Zhang')}</small></span>
+            <span class="mdui-text-color-white">{$suspicious_images_num} <small class="mdui-text-color-white">{:lang('Piece')}</small></span>
           </div>
         </div>
         <div class="mdui-col item mdui-m-b-2">
           <div class="mdui-color-deep-purple mdui-text-center mdui-text-color-white mdui-p-a-2 mdui-shadow-4 mdui-hoverable">
             <p><i class="mdui-icon material-icons">&#xe8d3;</i> {:lang('Number of users')}</p>
-            <span class="mdui-text-color-white">{$users_num} <small class="mdui-text-color-white">{:lang('Ge')}</small></span>
+            <span class="mdui-text-color-white">{$users_num} <small class="mdui-text-color-white">{:lang('Piece')}</small></span>
           </div>
         </div>
         <div class="mdui-col item mdui-m-b-2">
           <div class="mdui-color-red-accent mdui-text-center mdui-text-color-white mdui-p-a-2 mdui-shadow-4 mdui-hoverable">
             <p><i class="mdui-icon material-icons">&#xe2c3;</i> {:lang('Upload today')}</p>
-            <span class="mdui-text-color-white">{$today} <small class="mdui-text-color-white">{:lang('Zhang')}</small></span>
+            <span class="mdui-text-color-white">{$today} <small class="mdui-text-color-white">{:lang('Piece')}</small></span>
           </div>
         </div>
         <div class="mdui-col item mdui-m-b-2">
           <div class="mdui-color-indigo-accent mdui-text-center mdui-text-color-white mdui-p-a-2 mdui-shadow-4 mdui-hoverable">
             <p><i class="mdui-icon material-icons">&#xe2c3;</i> {:lang('Uploaded yesterday')}</p>
-            <span class="mdui-text-color-white">{$yesterday} <small class="mdui-text-color-white">{:lang('Zhang')}</small></span>
+            <span class="mdui-text-color-white">{$yesterday} <small class="mdui-text-color-white">{:lang('Piece')}</small></span>
           </div>
         </div>
         <div class="mdui-col item mdui-m-b-2">
           <div class="mdui-color-brown mdui-text-center mdui-text-color-white mdui-p-a-2 mdui-shadow-4 mdui-hoverable">
             <p><i class="mdui-icon material-icons">&#xe2c3;</i> {:lang('Upload this month')}</p>
-            <span class="mdui-text-color-white">{$month} <small class="mdui-text-color-white">{:lang('Zhang')}</small></span>
+            <span class="mdui-text-color-white">{$month} <small class="mdui-text-color-white">{:lang('Piece')}</small></span>
           </div>
         </div>
         <div class="mdui-col item mdui-m-b-2">
           <div class="mdui-color-blue-grey mdui-text-center mdui-text-color-white mdui-p-a-2 mdui-shadow-4 mdui-hoverable">
             <p><i class="mdui-icon material-icons">&#xe2c3;</i> {:lang('Visitor upload')}</p>
-            <span class="mdui-text-color-white">{$tourists} <small class="mdui-text-color-white">{:lang('Zhang')}</small></span>
+            <span class="mdui-text-color-white">{$tourists} <small class="mdui-text-color-white">{:lang('Piece')}</small></span>
           </div>
         </div>
       </div>
