--- a/application/index/view/auth/forgot.html
+++ b/application/index/view/auth/forgot.html
@@ -1,6 +1,6 @@
 {extend name="common:base" /}
 
-{block name="title"}找回密码 - {$config.site_name}{/block}
+{block name="title"}{:lang('Retrieve password')} - {$config.site_name}{/block}
 
 {block name="main"}
 <div class="mdui-container">
@@ -8,37 +8,37 @@
     <div class="mdui-row">
       <div class="forgot-container">
         <div class="panel mdui-col-sm-6 mdui-col-md-6 mdui-col-offset-sm-3 mdui-col-offset-md-3">
-          <div class="panel-header">找回密码</div>
+          <div class="panel-header">{:lang('Retrieve password')}</div>
           <div class="panel-body-box">
             <form id="send-code" action="{:url('auth/forgot')}" method="post">
               <div class="mdui-textfield mdui-textfield-floating-label">
-                <label class="mdui-textfield-label">请输入邮箱</label>
+                <label class="mdui-textfield-label">{:lang('Please input mailbox')}</label>
                 <input class="mdui-textfield-input" type="email" name="email" value="" required/>
               </div>
               <div class="mdui-textfield mdui-textfield-floating-label">
-                <label class="mdui-textfield-label">验证码</label>
+                <label class="mdui-textfield-label">{:lang('Verification Code')}</label>
                 <input class="mdui-textfield-input" type="text" name="captcha" maxlength="5" autocomplete="off" required/>
-                <img src="{:captcha_src()}" class="captcha" onclick="this.src = '{:captcha_src()}' + '?t=' + new Date().getTime()" alt="验证码">
+                <img src="{:captcha_src()}" class="captcha" onclick="this.src = '{:captcha_src()}' + '?t=' + new Date().getTime()" alt="{:lang('Verification Code')}">
               </div>
               <div class="mdui-textfield mdui-textfield-floating-label">
-                <button class="mdui-btn mdui-btn-block mdui-color-theme-accent mdui-ripple">发送验证码</button>
+                <button class="mdui-btn mdui-btn-block mdui-color-theme-accent mdui-ripple">{:lang('Send verification code')}</button>
               </div>
             </form>
             <form id="reset-password" class="none" action="{:url('auth/forgot')}" method="post">
               <div class="mdui-textfield mdui-textfield-floating-label">
-                <label class="mdui-textfield-label">邮件验证码</label>
+                <label class="mdui-textfield-label">{:lang('Mail verification code')}</label>
                 <input class="mdui-textfield-input" type="text" name="code" maxlength="5" autocomplete="off" required/>
               </div>
               <div class="mdui-textfield mdui-textfield-floating-label">
-                <label class="mdui-textfield-label">新密码</label>
+                <label class="mdui-textfield-label">{:lang('New password')}</label>
                 <input class="mdui-textfield-input" type="password" name="password" value="" required/>
               </div>
               <div class="mdui-textfield mdui-textfield-floating-label">
-                <label class="mdui-textfield-label">确认新密码</label>
+                <label class="mdui-textfield-label">{:lang('Confirm new password')}</label>
                 <input class="mdui-textfield-input" type="password" name="password_confirm" value="" required/>
               </div>
               <div class="mdui-textfield mdui-textfield-floating-label">
-                <button class="mdui-btn mdui-btn-block mdui-color-theme-accent mdui-ripple">重置密码</button>
+                <button class="mdui-btn mdui-btn-block mdui-color-theme-accent mdui-ripple">{:lang('Reset password')}</button>
               </div>
             </form>
           </div>
