--- a/application/index/view/common/base.html
+++ b/application/index/view/common/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="{$lang}">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="Cache-Control" content="no-siteapp"/>
@@ -13,7 +13,7 @@
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="stylesheet" href="/static/app/iconfont/iconfont.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mdui@0.4.3/dist/css/mdui.min.css">
-  <link rel="stylesheet" href="/static/app/css/app.css?v=1.6">
+  <link rel="stylesheet" href="/static/app/css/app.css?v=1.7">
   <link rel="stylesheet" href="/static/app/css/markdown.css?v=1.0">
   <!--[if IE]>
   <script>window.location.href = '/compatibility.html';</script>
@@ -156,7 +156,7 @@
 <script src="https://cdn.jsdelivr.net/npm/mdui@0.4.3/dist/js/mdui.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.6/dist/clipboard.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/marked@0.8.0/marked.min.js"></script>
-<script src="/static/app/js/app.js?v=1.2"></script>
+<script src="/static/app/js/app.js?v=1.3"></script>
 {block name="js"}{/block}
 <script>
   var ver = '{$config.system_version}';
