--- a/application/index/view/admin/system/index.html
+++ b/application/index/view/admin/system/index.html
@@ -16,7 +16,7 @@
       <div class="mdui-tab mdui-tab-scrollable" mdui-tab>
         <a href="#tab-basics" class="mdui-ripple">{:lang('Basic configuration')}</a>
         <a href="#tab-upload" class="mdui-ripple">{:lang('Upload configuration')}</a>
-        <a href="#tab-user" class="mdui-ripple">{:lang('Upload configuration')}</a>
+        <a href="#tab-user" class="mdui-ripple">{:lang('User configuration')}</a>
         <a href="#tab-mail" class="mdui-ripple">{:lang('Mail configuration')}</a>
         <a href="#tab-other" class="mdui-ripple">{:lang('Other configuration')}</a>
         <a href="#tab-audit" class="mdui-ripple">{:lang('Picture identification yellow')}</a>
