--- a/application/index/view/user/settings.html
+++ b/application/index/view/user/settings.html
@@ -16,7 +16,7 @@
           <input class="mdui-textfield-input" type="email" value="{$user.email}" disabled/>
         </div>
         <div class="mdui-textfield">
-          <label class="mdui-textfield-label">创建时间</label>
+          <label class="mdui-textfield-label">{:lang('Create time')}</label>
           <input class="mdui-textfield-input" type="text" value="{$user.create_time}" disabled/>
         </div>
         <div class="mdui-textfield">
