--- a/application/index/view/admin/users/index.html
+++ b/application/index/view/admin/users/index.html
@@ -33,7 +33,7 @@
           <th>{:lang('Total capacity')}</th>
           <th>{:lang('Account status')}</th>
           <th>{:lang('Register IP')}</th>
-          <th>{:lang('Created At')}</th>
+          <th>{:lang('Create time')}</th>
           <th>{:lang('Operation')}</th>
         </tr>
         </thead>
