用户管理和用户设置前台显示创建时间 (#263)

--- a/application/index/view/admin/users/index.html
+++ b/application/index/view/admin/users/index.html
@@ -33,6 +33,7 @@
           <th>{:lang('Total capacity')}</th>
           <th>{:lang('Account status')}</th>
           <th>{:lang('Register IP')}</th>
+          <th>{:lang('Create time')}</th>
           <th>{:lang('Operation')}</th>
         </tr>
         </thead>
@@ -58,6 +59,7 @@
             </select>
           </td>
           <td>{$value.reg_ip}</td>
+          <td>{$value.create_time}</td>
           <td>
             <div class="mdui-btn-group">
               <button class="mdui-btn mdui-btn-raised mdui-btn-dense edit">{:lang('Edit')}</button>
