--- a/application/index/view/user/settings.html
+++ b/application/index/view/user/settings.html
@@ -16,6 +16,10 @@
           <input class="mdui-textfield-input" type="email" value="{$user.email}" disabled/>
         </div>
         <div class="mdui-textfield">
+          <label class="mdui-textfield-label">{:lang('Create time')}</label>
+          <input class="mdui-textfield-input" type="text" value="{$user.create_time}" disabled/>
+        </div>
+        <div class="mdui-textfield">
           <label class="mdui-textfield-label">Token</label>
           <input class="mdui-textfield-input" type="text" value="{$user.token}" disabled/>
           <div class="mdui-textfield-helper">{:lang('Token tip')}</div>
