:sparkles: 增加一键复制功能 Closed #167

--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -55,6 +55,11 @@
     {/if}
   </main>
 </div>
+<div class="mdui-fab-wrapper" id="fab-buttons">
+  <button class="mdui-fab mdui-ripple mdui-color-blue-700 mdui-fab-hide copy" id="copy-all">
+    <i class="mdui-icon material-icons">&#xe14d;</i>
+  </button>
+</div>
 {/block}
 {block name="js"}
 <script src="/static/bootstrap/js/bootstrap.min.js"></script>
@@ -67,6 +72,19 @@
 <script>
   var clipboard = new ClipboardJS('.copy', {
     text: function(trigger) {
+      // copy all
+      if (trigger.id === 'copy-all') {
+        var str = '';
+        var id = $('.success-info a.mdui-tab-active').attr('href');
+        $(id + ' li').each(function (index, item) {
+          if (index > 0) {
+            str += '\r\n';
+          }
+          str += $(item).text();
+        });
+        return str;
+      }
+
       return $(trigger).parent('li').text();
     }
   });
@@ -78,6 +96,10 @@
   clipboard.on('error', function(e) {
     app.msg(false, '复制失败');
   });
+
+  var toggleCopyAllBtn = function () {
+    $('#copy-all')[$('#code-url ul li').length ? 'removeClass' : 'addClass']('mdui-fab-hide');
+  }
 
   var sort = function (uls) {
     for (var i = 0; i < uls.length; i++) {
@@ -121,6 +143,7 @@
         $('.quota-container span.quota').text(app.bytesToSize(response.data.quota));
         $('.quota-container span.use-quota').text(app.bytesToSize(response.data.use_quota));
       }
+      toggleCopyAllBtn();
     } else if (500 === response.code) {
       mdui.alert(response.msg, '发生异常');
     } else {
@@ -133,6 +156,7 @@
       .find('#code-url, #code-html, #code-bbcode, #code-markdown, #code-markdown-with-link')
       .find('ul')
       .html('');
+    toggleCopyAllBtn();
   });
   $('#image').css("display", "block");
 
@@ -141,6 +165,7 @@
   }).on('mouseout', 'li', function () {
     $('.file-preview .file-drop-zone .file-preview-thumbnails > [data-template=image]').eq($(this).data('index')).removeClass('hover');
   });
+
 </script>
 {if 1 == $config.allowed_tourist_upload or $user}
 <script>
